--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.0",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "osc": "^2.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
