--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "lodash": "^4.17.11",
+    "node-wifi": "2.0.4",
     "osc": "^2.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
